Fri Jul  5 20:18:23 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenushell.[ch] gtk/gtkmenubar.c gtk/gtkmenuitem.c
	gtk/gtkentry.c gtk/gtktextview.c: Add an extra parameter
	to _gtk_menu_item_select_first() to allow us to choose
	whether we want to select the first item predictably
	or to select the first sensitive item. Fixes problem
	with insensitive menu items and keynav. (#85796,
	reported by Bill Haneman and others.)

Fri Jul  5 02:50:24 2002  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtktreeview.c (gtk_tree_view_collapse_all): fix warning.
	(gtk_tree_view_search_iter): fix warning, #85884

	* gtk/gtktreestore.c (gtk_tree_store_get_flags): change return
	value to GtkTreeModelFlags to fix compiler warning, #85883

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_get_flags): change
	return value to GtkTreeModelFlags to fix compiler warning, #85882

	* gtk/gtktreemodel.c (gtk_tree_path_prepend_index): fix compiler
	warning, #85881

Fri Jul  5 12:51:39 2002  Kristian Rietveld  <kris@gtk.org>

	Merge from HEAD.

	* gtk/gtkliststore.c (gtk_list_store_sort): also update ->tail after	
	sorting.

2002-07-02 Padraig O'Briain <padraig.obriain@sun.com>

	* gtk/gtksocket.c (gtk_socket_hierarchy_changed):
	Use hyphen instead of underscore in signal names in calls to
	g_signal_connect_swapped (Fixes bug #86339)

Tue Jul  2 00:33:26 2002  Jonathan Blandford  <jrb@gnome.org>

    * gtk/gtktreeview.c (validate_visible_area): only validate the
      visible area if we've ever been requisitioned.

Mon Jul  1 17:04:09 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkliststore.c (gtk_list_store_real_set_value): sync up
	white space/variable names to match tree_store equiv.

	* gtk/gtktreestore.c (gtk_tree_store_real_set_value): sort if we
	set the value.

Mon Jul 01 17:19:00 2002  Bill Haneman <bill.haneman@sun.com>

	* contrib/gdk-pixbuf-xlib/gdk-pixbuf-xlib-drawable.c
	(xlib_window_is_viewable):
	Fixed failure of assertion when drawable is root window.
