@@ -1,3 +1,10 @@
+Wed Jul 10 14:27:14 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* modules/input/gtkimcontextxim.c gtk/gtkcolorsel.c 
+	gtk/gtkdialog.c gtk/gtktextbtree.c: Fix some cases
+	where signal connection IDs where being assigned to 
+	guint rather than gulong. (part of #87281, Shivram U)
+
 Fri Jul  5 20:18:23 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkmenushell.[ch] gtk/gtkmenubar.c gtk/gtkmenuitem.c
